cmake_minimum_required(VERSION 3.13)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

#add_executable(leetcode src/binaryTreePreorderTraversal.cpp)
add_executable(009added src/009added.cpp)
add_executable(eg004 src/CodingInterviews004.cpp)
add_executable(eg005 src/CodingInterviews005.cpp)
add_executable(eg005added src/CodingInterviews005added.cpp)
add_executable(eg006 src/CodingInterviews006.cpp)
add_executable(eg007 src/CodingInterviews007.cpp)
add_executable(007debug src/007debug.cpp)
add_executable(eg009 src/CodingInterviews009.cpp)
add_executable(009debug src/009debug.cpp)
add_executable(eg010 src/CodingInterviews010.cpp)
add_executable(leetcode031 src/leetcode031.cpp)
add_executable(QuickSort src/QuickSort.cpp)
add_executable(QuickSortdebug src/QuickSortdebug.cpp)
add_executable(eg011 src/CodingInterviews011.cpp)
add_executable(leetcode189 src/leetcode189.cpp)
add_executable(leetcode061 src/leetcode061.cpp)
add_executable(leetcode002 src/leetcode002.cpp)
add_executable(leetcode004 src/leetcode004.cpp)
add_executable(BubbleSort src/BubbleSort.cpp)
add_executable(MergeSort src/MergeSort.cpp)
add_executable(leetcode021 src/leetcode021.cpp)
add_executable(memory src/memcpy_memmove_memset.cpp)
add_executable(eg052 src/CodingInterviews052.cpp)
add_executable(leetcode001 src/leetcode001.cpp)
add_executable(eg014 src/CodingInterviews014.cpp)
add_executable(leetcode005 src/leetcode005.cpp)
add_executable(leetcode007 src/leetcode007.cpp)
add_executable(maxtimeofstring src/findMaxTimesOfString.cpp)
add_executable(leetcode008 src/leetcode008.cpp)
add_executable(leetcode009 src/leetcode009.cpp)
add_executable(leetcode011 src/leetcode011.cpp)
