cmake_minimum_required(VERSION 3.13)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

#add_executable(leetcode src/binaryTreePreorderTraversal.cpp)
add_executable(009added src/009added.cpp)
add_executable(eg004 src/CodingInterviews004.cpp)
add_executable(eg005 src/CodingInterviews005.cpp)
add_executable(eg005added src/CodingInterviews005added.cpp)
add_executable(eg006 src/CodingInterviews006.cpp)
add_executable(eg007 src/CodingInterviews007.cpp)
add_executable(007debug src/007debug.cpp)
add_executable(eg009 src/CodingInterviews009.cpp)
add_executable(009debug src/009debug.cpp)
add_executable(eg010 src/CodingInterviews010.cpp)
add_executable(leetcode031 src/leetcode031.cpp)
add_executable(QuickSort src/QuickSort.cpp)
add_executable(QuickSortdebug src/QuickSortdebug.cpp)
add_executable(eg011 src/CodingInterviews011.cpp)
add_executable(leetcode189 src/leetcode189.cpp)
add_executable(leetcode061 src/leetcode061.cpp)
add_executable(leetcode002 src/leetcode002.cpp)
add_executable(leetcode004 src/leetcode004.cpp)
add_executable(BubbleSort src/BubbleSort.cpp)
add_executable(MergeSort src/MergeSort.cpp)
add_executable(leetcode021 src/leetcode021.cpp)
add_executable(memory src/memcpy_memmove_memset.cpp)
add_executable(eg052 src/CodingInterviews052.cpp)
add_executable(leetcode001 src/leetcode001.cpp)
add_executable(eg014 src/CodingInterviews014.cpp)
add_executable(leetcode005 src/leetcode005.cpp)
add_executable(leetcode007 src/leetcode007.cpp)
add_executable(maxtimeofstring src/findMaxTimesOfString.cpp)
add_executable(leetcode008 src/leetcode008.cpp)
add_executable(leetcode009 src/leetcode009.cpp)
add_executable(leetcode011 src/leetcode011.cpp)
add_executable(eg015 src/CodingInterviews015.cpp)
add_executable(leetcode014 src/leetcode014.cpp)
add_executable(leetcode015 src/leetcode015.cpp)
add_executable(leetcode016 src/leetcode016.cpp)
add_executable(leetcode020 src/leetcode020.cpp)
add_executable(eg024 src/CodingInterviews024.cpp)
add_executable(leetcode092 src/leetcode092.cpp)
add_executable(leetcode142 src/leetcode142.cpp)
add_executable(leetcode086 src/leetcode086.cpp)
add_executable(leetcode138 src/leetcode138.cpp)
add_executable(leetcode023 src/leetcode023.cpp)
add_executable(leetcode225 src/leetcode225.cpp)
add_executable(leetcode232 src/leetcode232.cpp)
add_executable(leetcode155 src/leetcode155.cpp)
add_executable(validOrder src/validOrder.cpp)
add_executable(leetcode224 src/leetcode224.cpp)
add_executable(leetcode215 src/leetcode215.cpp)
add_executable(leetcode295 src/leetcode295.cpp)
add_executable(leetcode455 src/leetcode455.cpp)
add_executable(leetcode376 src/leetcode376.cpp)
add_executable(leetcode402 src/leetcode402.cpp)
add_executable(leetcode055 src/leetcode055.cpp)
add_executable(leetcode045 src/leetcode045.cpp)
add_executable(leetcode452 src/leetcode452.cpp)
add_executable(minimumstop src/MinimumStop.cpp)
add_executable(leetcode078 src/leetcode078.cpp)
add_executable(leetcode090 src/leetcode090.cpp)
add_executable(leetcode040 src/leetcode040.cpp)
add_executable(leetcode039 src/leetcode039.cpp)
add_executable(leetcode022 src/leetcode022.cpp)
add_executable(leetcode315 src/leetcode315.cpp)
add_executable(leetcode113 src/leetcode113.cpp)
add_executable(leetcode236 src/leetcode236.cpp)
add_executable(leetcode114 src/leetcode114.cpp)
add_executable(test src/test.cpp)
